SERVER-22849 Improve logging for splitChunk